/*
 * $Id: ChangeLog,v 1.561 2002/12/30 05:04:58 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-12-30 16:50 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
        ! fixed scope related bug, reported by Blue Face
        + added support for the EVAL clause in INDEX

2002-12-29 21:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
  * source/vm/arrays.c
  * source/vm/codebloc.c
    * Reverted to PRE Forbid version.
    * Changed HB_CRITICAL_[UN]LOCK() to hb_threadForbid/Allow()

  * include/thread.h
  * source/vm/thread.c
    - Removed [Un]Lock support from HB_FORBID_MUTEX related logic.

  * source/vm/garbage.c
    ! Fixed to correctly support new Forbid/Allow scheme.

2002-12-29 16:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
  * source/vm/garbage.c
  * source/vm/thread.c
    * Minor improvements and fixes.

2002-12-30 00:26 UTC+0100 Giancarlo Niccolai <giancarlo@niccolai.ws>
  * source/vm/thread.c
  * include/thread.h
    + Added hb_threadForbid* function family to manage Forbid Mutex type.

  * source/vm/arrays.c
  * source/vm/codebloc.c
  * source/vm/fm.c
  * source/vm/garbage.c
  * source/vm/hvm.c
    * Added Forbid Mutex Method to allow concurrent updating of Garbage Collecting.

2002-12-29 11:54 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  *  source/vm/arrays.c
  *  source/vm/codebloc.c
  *  source/vm/hvm.c
    ! More thread safety fixes.

2002-12-29 09:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/garbage.c
  * source/vm/hvm.c
  * source/vm/thread.c
    ! Minor fixes to GC Thread Safety.

2002-12-29 00:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/thread.h
  * include/hbapi.h
  * source/vm/thread.c
    + Added hb_threadIsLocalRef( void )

  * include/hbstack.h
    + Added #define STACK_THREADHB_ITEMS 100
